@@ -206,15 +206,15 @@ Connect_Thread::svc (void)
 
       // Complete connection. It's what complete_connection() in TAO does.
       // Not exactly but for the test it's enough.
-      bool one_run_for_wfmo = true;
-      while (this->reactor_.work_pending () > 0 || one_run_for_wfmo)
+      int run_for_wfmo = 5;
+      while (this->reactor_.work_pending () && run_for_wfmo)
         {
           ACE_GUARD_RETURN (ACE_Thread_Mutex, ace_mon,
                             this->reactor_lock_, -1);
 
-          if (this->reactor_.work_pending () > 0 || one_run_for_wfmo)
+          if (this->reactor_.work_pending () && run_for_wfmo)
             {
-              one_run_for_wfmo = false;
+              --run_for_wfmo;
 
               ACE_DEBUG ((LM_DEBUG,
                           "%t waiting for connection to %s...\n",
